# mathlib

./: .gitignore  CMakeLists.txt  LICENSE
src/Core/Matrix/: matrix.h
src/Core/Vector/: vector.h
src/LinAlg/Vector/: vector.h
src/mathlib/: mathlib.h
src/mathlib/Core/Matrix/: matrix.h
src/mathlib/Core/Quaternion/: quaternion.h
src/mathlib/Core/Vector/: point.h  vector.h  vectorPointBase.h
src/mathlib/util/: type_traits.h  util.h
src/util/: type_traits.h  util.h
tests/: CMakeLists.txt
tests/Core/Matrix/: matrix.test.cpp
tests/Core/Quaternion/: quaternion.test.cpp
tests/Core/Vector/: vector.test.cpp
tests/LinAlg/Vector/: vector.test.cpp
tests/util/: type_traits.test.cpp  util.test.cpp
tools/googletest/: CMakeLists.txt.in
